# tree-sitter-pandoc-markdown

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  readme.md  setup.py  tree-sitter.json
bindings/c/: tree-sitter-pandoc_markdown.pc.in
bindings/go/: binding.go  binding_test.go  pandoc_markdown.go  pandoc_markdown_inline.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_markdown/: binding.c
bindings/python/tree_sitter_pandoc_markdown/: __init__.py  binding.c
bindings/rust/: benchmark.rs  build.rs  lib.rs
bindings/swift/TreeSitterPandocMarkdown/: pandoc_markdown.h
bindings/swift/TreeSitterPandocMarkdownTests/: TreeSitterPandocMarkdownTests.swift
examples/: test.qmd
scripts/: build.js  test.js
tree-sitter-pandoc-markdown/: Makefile  grammar.js
tree-sitter-pandoc-markdown-inline/: Makefile  grammar.js  package-lock.json
tree-sitter-pandoc-markdown-inline/bindings/c/: tree-sitter-pandoc-markdown-inline.pc.in
tree-sitter-pandoc-markdown-inline/src/: grammar.json  parser.c  scanner.c
tree-sitter-pandoc-markdown-inline/test/corpus/: spec.txt
tree-sitter-pandoc-markdown-inline/tree-sitter-markdown-inline/src/: parser.c
tree-sitter-pandoc-markdown/bindings/c/: tree-sitter-pandoc-markdown.h  tree-sitter-pandoc-markdown.pc.in
tree-sitter-pandoc-markdown/queries/: injections.scm
tree-sitter-pandoc-markdown/src/: grammar.json  parser.c  scanner.c
tree-sitter-pandoc-markdown/test/corpus/: pandoc.txt
tree-sitter-pandoc-markdown/tree-sitter-markdown/: tree-sitter.json
