[package]
name = "tree-sitter-pandoc-markdown"
description = "Treesitter parser for markdown with pandoc extensions"
version = "0.1.0"
authors = ["Jannik Buhr <jannik.m.buhr@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pandoc-markdown"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jmbuhr/tree-sitter-pandoc-markdown"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.2"
