[package]
name = "tree-sitter-pandoc-markdown"
description = "Treesitter parser for markdown with pandoc extensions"
version = "0.1.0"
authors = ["Jannik Buhr <jannik.m.buhr@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pandoc-markdown"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jmbuhr/tree-sitter-pandoc-markdown"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "tree-sitter-pandoc-markdown/src/*",
  "tree-sitter-pandoc-markdown-inline/src/*",
  "tree-sitter-pandoc-markdown/grammar.js",
  "tree-sitter-pandoc-markdown-inline/grammar.js",
  "tree-sitter-pandoc-markdown/queries/*",
  "tree-sitter-pandoc-markdown-inline/queries/*",
  "common/grammar.js",
  "common/html_entities.json",
]

[features]
parser = ["tree-sitter"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"
tree-sitter = { version = "0.23", optional = true }

[dev-dependencies]
tree-sitter = "0.23.0"

[build-dependencies]
cc = "^1.0.89"

[[bin]]
name = "benchmark"
path = "bindings/rust/benchmark.rs"
required-features = ["parser"]

[profile.release]
debug = true

[package.metadata.docs.rs]
features = ["parser"]
rustdoc-args = ["--cfg", "docsrs"]
